# django-toy

./: .gitignore  pyproject.toml
djangotoy/: manage.py
djangotoy/djangotoy/: asgi.py  settings.py  urls.py  wsgi.py
djangotoy/polls/: urls.py  views.py
djangotoy/polls/migrations/: 0001_initial.py
djangotoy/polls/templates/polls/: detail.html  index.html
